--- a/styles.css
+++ b/styles.css
@@ -100,3 +100,13 @@ button:hover{
     border: 1px solid rgba(255, 255, 255, 0.18);
     box-shadow: 0 8px 32px 0 rgba(0, 0, 0, 0.18);
 }
+
+.B{
+    border: none;
+    border-radius: 30px;
+    height: 50px;
+    outline: none;
+    width: 50px;
+    cursor: pointer;
+    transition: .3s;
+}
