--- a/styles.css
+++ b/styles.css
@@ -111,7 +111,7 @@ body {
 }
 
 /* Background image when 'background' class is added */
-body.background {
+*.background {
     background-image: url('IMG_0123.jpeg');
     background-size: cover;
     background-repeat: no-repeat;
